Implemented UI for iPhone app and watch app

--- a/Convo WatchKit App/Base.lproj/Interface.storyboard
+++ b/Convo WatchKit App/Base.lproj/Interface.storyboard
@@ -1,16 +1,77 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch38" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11055"/>
+        <deployment identifier="watchOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="12029"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
+        <scene sceneID="SkF-M6-tOk">
+            <objects>
+                <controller id="tNY-cZ-7gy">
+                    <items>
+                        <label width="136" height="112" alignment="left" text="I have a dream..." textAlignment="center" numberOfLines="0" id="Mwe-O1-ai1">
+                            <fontDescription key="font" type="boldSystem" pointSize="16"/>
+                        </label>
+                        <timer alignment="center" verticalAlignment="center" textAlignment="center" id="olY-y2-j01"/>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="218" y="52"/>
+        </scene>
+        <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Convo_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <table alignment="left" id="nuX-LN-T9W"/>
+                        <button width="1" height="32" alignment="left" title="Quick" id="3m4-Ta-WxF" propertyAccessControl="none">
+                            <color key="backgroundColor" red="1" green="0.24297494150000001" blue="0.54230029179999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <fontDescription key="font" type="system" pointSize="16"/>
+                            <connections>
+                                <segue destination="ea6-hT-Chi" kind="push" id="Q0p-1r-CBs"/>
+                            </connections>
+                        </button>
+                        <button width="1" height="32" alignment="left" title="Categories" id="y0R-wS-6LP">
+                            <color key="backgroundColor" red="1" green="0.49171667225531102" blue="0.14165038968577115" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="L73-c3-yKz" kind="push" id="H1U-s9-muZ"/>
+                            </connections>
+                        </button>
+                        <button width="1" height="32" alignment="left" title="Your Notes" id="5bT-ih-9DR">
+                            <color key="backgroundColor" red="0.22435937825869157" green="0.7638707962920156" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="tNY-cZ-7gy" kind="push" id="jg8-aX-5Tt"/>
+                            </connections>
+                        </button>
+                        <button width="1" height="32" alignment="left" title="Favorites" id="4OM-Tt-vLy">
+                            <color key="backgroundColor" red="0.0" green="0.8828125" blue="0.63238028722633521" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="ea6-hT-Chi" kind="push" id="VxB-45-7X0"/>
+                            </connections>
+                        </button>
+                    </items>
+                </controller>
             </objects>
             <point key="canvasLocation" x="220" y="345"/>
+        </scene>
+        <!--Interface Controller-->
+        <scene sceneID="s27-hS-UHl">
+            <objects>
+                <controller id="ea6-hT-Chi">
+                    <items>
+                        <label width="136" height="103" alignment="left" text="Your Conversation Starter..." textAlignment="center" numberOfLines="0" id="ESI-hh-ekw">
+                            <fontDescription key="font" style="UICTFontTextStyleBody"/>
+                        </label>
+                        <button width="34" height="33" alignment="center" verticalAlignment="center" backgroundImage="favorite" id="Sl7-4p-eda"/>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="709" y="307.5"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -26,14 +87,57 @@
                     </connections>
                 </notificationController>
             </objects>
-            <point key="canvasLocation" x="220" y="643"/>
+            <point key="canvasLocation" x="220" y="985"/>
         </scene>
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
-                <controller id="4sK-HA-Art" customClass="NotificationController" customModuleProvider="target"/>
+                <controller id="4sK-HA-Art" customClass="NotificationController" customModule="Convo_WatchKit_App" customModuleProvider="target"/>
             </objects>
-            <point key="canvasLocation" x="468" y="643"/>
+            <point key="canvasLocation" x="499" y="985"/>
+        </scene>
+        <!--Interface Controller-->
+        <scene sceneID="hwk-9M-1b1">
+            <objects>
+                <controller id="L73-c3-yKz">
+                    <items>
+                        <button width="1" alignment="left" title="Ice Breakers" id="XeD-Ll-MOd">
+                            <color key="backgroundColor" red="0.54691760658484445" green="0.1112430902216216" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="ea6-hT-Chi" kind="push" id="rfx-fv-VEO"/>
+                            </connections>
+                        </button>
+                        <button width="1" alignment="left" title="News" id="7Vk-ey-XMM">
+                            <color key="backgroundColor" red="0.15126273911817367" green="0.11648177091897538" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="ea6-hT-Chi" kind="push" id="EqU-Av-QYN"/>
+                            </connections>
+                        </button>
+                        <button width="1" alignment="left" title="Throwbacks" id="Yqd-HX-274">
+                            <color key="backgroundColor" red="0.41449853554217075" green="0.70970812182741116" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="ea6-hT-Chi" kind="push" id="ixn-ax-h7N"/>
+                            </connections>
+                        </button>
+                        <button width="1" alignment="left" title="Awkward Date" id="Cn8-zz-8i5">
+                            <color key="backgroundColor" red="1" green="0.063817914522339536" blue="0.49704099043103933" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="ea6-hT-Chi" kind="push" id="EwY-On-SwR"/>
+                            </connections>
+                        </button>
+                        <button width="1" alignment="left" title="Interview " id="sLl-ma-xS5">
+                            <color key="backgroundColor" red="1" green="0.63504658237763745" blue="0.21371057591764464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="ea6-hT-Chi" kind="push" id="AVM-bu-VtC"/>
+                            </connections>
+                        </button>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="220" y="630"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="rfx-fv-VEO"/>
+    </inferredMetricsTieBreakers>
 </document>
